--- a/assets/templates/overView.ejs
+++ b/assets/templates/overView.ejs
@@ -76,5 +76,7 @@ var getFormatedTimeLabel = function(step) {
 <div id="rightOverview">
   <ul id="availableTalks" class="droptrue sortable">
     Talks
+      <table border="3"><tr><td style="background-color:red;"class="remove">drop here to remove from table</td></tr></table>
+
   </ul>
 </div>
