--- a/assets/templates/conferenceView.ejs
+++ b/assets/templates/conferenceView.ejs
@@ -4,3 +4,4 @@
         <option value="<%=conferences[key].attributes._key%>"><%=conferences[key].attributes.conference%></option>
     <% } %>
 </select>
+<!--<button id="newConferenceButton" class="btn btn-success pull-left">New Conference</button>-->
