--- a/assets/templates/navigationView.ejs
+++ b/assets/templates/navigationView.ejs
@@ -5,10 +5,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="#">Project Planner</a>
+        <div class="navbar-conference">Conference: <%=conferenceName %> (<%=conferenceKey %>)</div>
         <div class="nav-collapse collapse">
             <ul class="nav">
-                <li id="home" class="active"><a>Home</a></li>
+                <li id="home" class="active"><a>Schedule</a></li>
                 <li id="talks"><a>Talks</a></li>
                 <li id="speaker"><a>Speaker</a></li>
                 <li id="tracks"><a>Tracks</a></li>
