--- a/assets/templates/newConferenceView.ejs
+++ b/assets/templates/newConferenceView.ejs
@@ -1,43 +1,7 @@
-<form id="addservice" accept-charset="UTF-8">
     <table>
         <tr>
-            <td>Name</td>
-            <td><input type="text"/></td>
+            <td>Name: </td>
+            <td><input type="text" id="newConferenceName"></input></td>
         </tr>
     </table>
-    <div id="error" class="alert alert-error" style="display:none;"></div>
-    <fieldset>
-        <div class="control-group">
-            <div class="controls">
-                <label>Region</label>
-                <div class="text-error"></div>
-                <div data-editors="region"></div>
-            </div>
-        </div>
-        <div class="control-group">
-            <div class="controls">
-                <label>Stage</label>
-                <div class="text-error"></div>
-                <div data-editors="stage"></div>
-            </div>
-        </div>
-        <div class="control-group">
-            <div class="controls">
-                <label>Description</label>
-                <div class="text-error"></div>
-                <div data-editors="description"></div>
-            </div>
-        </div>
-        <div class="control-group">
-            <div class="controls">
-                <label>Primary Contact</label>
-                <div class="text-error"></div>
-                <div data-editors="contact"></div>
-            </div>
-        </div>
-
-        <input id="AddService" class="btn btn-primary" type="submit" name="submit" value="Add Service" />
-    </fieldset>
-</form>
-
-<button id="newConferenceButton" class="btn btn-success pull-left">Blub</button>
+    <input type="submit" id="createNewConferenceButton" value="create" />
