--- a/assets/templates/singleTalkView.ejs
+++ b/assets/templates/singleTalkView.ejs
@@ -1,5 +1,5 @@
 <div id="<%=talk.get("_key")%>" class="talk talk-<%=talk.get("Category_key")%>" style="height:<%=height * 57 - 20 %>px;">
-  <span class="remove">x</span><br />
+  <span class="remove"><a alt="remove talk from schedule">x</a></span><br />
   <span><%=talk.get("Title")%></span><br />
   <span><%=talk.get("Speaker")%></span><br />
   <span><%=talk.get("Category")%></span><br />
