added configuration for number of days of conference

--- a/assets/templates/newConferenceView.ejs
+++ b/assets/templates/newConferenceView.ejs
@@ -3,5 +3,17 @@
             <td>Name: </td>
             <td><input type="text" id="newConferenceName"></input></td>
         </tr>
+        <tr>
+            <td>Number Of Days: </td>
+            <td>
+                <select id="numberOfDays" name="numberOfDays" size="1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+            </td>
+        </tr>
     </table>
     <input type="submit" id="createNewConferenceButton" value="create" />
